# contract-collector

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: collect.yml
dashboard/: index.html  nginx.conf  package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/components/: CategoryChart.tsx  RecordsTable.tsx  SourceBar.tsx  StatCard.tsx  ThemeToggle.tsx  TimelineChart.tsx
dashboard/src/hooks/: useTheme.ts
src/collector/: __init__.py  cli.py  orchestrator.py
src/collector/adapters/: __init__.py  base.py  nyc_procurement.py  registry.py  sam_gov.py
src/collector/api/: __init__.py  app.py
src/collector/core/: __init__.py  config.py  logging.py  schemas.py
src/collector/ml/: __init__.py  classifier.py  dedup.py  normalizer.py  pipeline.py
src/collector/storage/: __init__.py  mongo.py
tests/: conftest.py  test_schemas.py
tests/adapters/: test_base_adapter.py
tests/ml/: test_classifier.py  test_dedup.py  test_normalizer.py
