[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-collector"
version = "0.1.0"
description = "Public Procurement & Contract Intelligence Collector"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "playwright>=1.40",
    "motor>=3.3",               # async MongoDB driver
    "pymongo>=4.6",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "tenacity>=8.2",            # retry / backoff
    "aiolimiter>=1.1",          # async rate-limiting
    "structlog>=23.2",          # structured JSON logging
    "click>=8.1",               # CLI
    "scikit-learn>=1.3",
    "pandas>=2.1",
    "numpy>=1.26",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "httpx>=0.25",              # async HTTP client (lightweight requests)
    "redis>=5.0",               # optional worker queue backend
    "rq>=1.16",                 # optional Redis Queue
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mongomock>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.6",
]
embeddings = [
    "sentence-transformers>=2.2",
]

[project.scripts]
collector = "collector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/collector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
